// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<img
  alt="This is alt text for this image"
  className="Image__ImageWrapper-sc-18abvff-0 driND"
  onClick={null}
  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
  title="This is alt text for this image"
  width={null}
/>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 dKAOmQ"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="125"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 fPjIBY"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="75"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 kGssDL"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="50"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 cgenCl"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="25"
  />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 driND"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width={null}
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 eBLCdH"
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width={null}
  />
</section>
`;
